<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="brotherteam.com.tabletapp.MainActivity"
    android:background="#ffffff"
    >

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/coordinateLayout">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height= "wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="@drawable/back"
            android:layout_marginTop="50dp"
            />

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="برجاء تسجيل الدخول ليصلك اعلانتنا"-->
            <!--android:textColor="@color/colorPrimaryDark"-->
            <!--android:textSize="20sp"-->
            <!--android:textStyle="bold"-->
            <!--android:layout_marginTop="20dp"/>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearence"
                android:padding="9dp"
                android:textColorHint="@color/colorPrimaryDark"
                android:layout_weight="1">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastname"
                    android:textColorHint="@color/colorAccent"
                    android:id="@+id/lastName"
                    android:layout_marginTop="10dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearence"
                android:padding="9dp"
                android:textColorHint="@color/colorPrimaryDark"
                android:layout_weight="1">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/firstname"
                    android:textColorHint="@color/colorAccent"
                    android:id="@+id/firsName"

                    android:layout_marginTop="10dp"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextAppearence"
            android:padding="9dp"
            android:textColorHint="@color/colorPrimaryDark"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/colorAccent"
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:layout_marginTop="10dp"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextAppearence"
            android:padding="9dp"
            android:textColorHint="@color/colorPrimaryDark"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:textColorHint="@color/colorAccent"
                android:id="@+id/phoneNumber"
                android:inputType="number"
                android:layout_marginTop="10dp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextAppearence"
            android:padding="9dp"
            android:textColorHint="@color/colorPrimaryDark"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phoneNum"
                android:textColorHint="@color/colorAccent"
                android:id="@+id/phone"
                android:inputType="number"
                android:layout_marginTop="10dp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextAppearence"
            android:padding="9dp"
            android:textColorHint="@color/colorPrimaryDark"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/workplace"
                android:textColorHint="@color/colorAccent"
                android:id="@+id/workplace"
                android:layout_marginTop="10dp"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextAppearence"
            android:padding="9dp"
            android:textColorHint="@color/colorPrimaryDark"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/workStyle"
                android:textColorHint="@color/colorAccent"
                android:id="@+id/workStyle"
                android:layout_marginTop="10dp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextAppearence"
            android:padding="9dp"
            android:textColorHint="@color/colorPrimaryDark"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/note"
                android:textColorHint="@color/colorAccent"
                android:id="@+id/note"
                android:layout_marginTop="10dp"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="240dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/login_hover"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:id="@+id/register"/>
    </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>
</ScrollView>
